Fix Bug and Add Some API Documentation
