# src/controllers/validation/individualSchema.ts
@@ -18,10 +18,10 @@ const saveJobIndividualSchema = Joi.object({
   id: Joi.string().required()
 })
 const updateIndividualSchema = Joi.object(({
-  name: Joi.string().min(3).max(32).required(),
-  address: Joi.string().min(10).max(100).required(),
-  phone: Joi.string().min(10).max(12).required(),
-  age: Joi.number().min(12).max(100).required(),
+  name: Joi.string().min(3).max(32),
+  address: Joi.string().min(10).max(100),
+  phone: Joi.string().min(10).max(12),
+  age: Joi.number().min(12).max(100),
   description: Joi.string().required()
   // social: Joi.string().required()
 }))
